k8s/overlays/dev/service-external/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-external
  labels:
    app.kubernetes.io/name: service-external
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: service-external
  template:
    metadata:
      labels:
        app.kubernetes.io/name: service-external
    spec:
      serviceAccountName: service-external-sa

      volumes:
        - name: kafka-ca
          emptyDir: {}


      containers:
        - name: service-external
          image: 345340320521.dkr.ecr.us-east-2.amazonaws.com/service-external:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
