k8s/overlays/dev/service-external/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-external
  labels:
    app.kubernetes.io/name: service-external
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: service-external
  ports:
    - name: http
      port: 80
      targetPort: http
